# cursor-rust

./: .gitignore  README.md  UNLOCK_DESIGN.md  package-lock.json  package.json  一键更新功能技术文档.md  无感换号自动重置机器码逆向分析文档.md  注入自动重置机器码实现详解.md
.github/workflows/: build.yml
scripts/: create-dmg-background.sh  obfuscate.js
src-tauri/: Cargo.toml  build.rs  entitlements.mac.plist  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/commands/: anti_debug.rs  api.rs  card.rs  cursor_modify.rs  cursor_paths.rs  cursor_process.rs  database.rs  file_ops.rs  ipc.rs  log_buffer.rs  machine_id.rs  mod.rs  model.rs  permissions.rs  proxy.rs  seamless_switch.rs  settings.rs  unlock_mitm.rs  unlock_workbench.rs  updater.rs  utils.rs  window_ctrl.rs  workbench_inject.rs  workspace.rs
ui/: index.html  tauri-bridge.js
参考/MyCursor-main/MyCursor-main/: .env.example  .eslintrc.cjs  .gitignore  .prettierignore  .prettierrc.json  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
参考/MyCursor-main/MyCursor-main/.github/workflows/: build-public.yml
参考/MyCursor-main/MyCursor-main/src/: App.tsx  main.tsx
参考/MyCursor-main/MyCursor-main/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
参考/MyCursor-main/MyCursor-main/src-tauri/capabilities/: default.json
参考/MyCursor-main/MyCursor-main/src-tauri/icons/: icon.icns
参考/MyCursor-main/MyCursor-main/src-tauri/src/: error.rs  lib.rs  logger.rs  main.rs
参考/MyCursor-main/MyCursor-main/src-tauri/src/commands/: account.rs  analytics.rs  identity.rs  mod.rs  seamless.rs  system.rs  telemetry.rs  window.rs
参考/MyCursor-main/MyCursor-main/src-tauri/src/domain/: account.rs  auth.rs  identity.rs  mod.rs  usage.rs
参考/MyCursor-main/MyCursor-main/src-tauri/src/infra/: mod.rs
参考/MyCursor-main/MyCursor-main/src-tauri/src/infra/api/: checksum.rs  client.rs  mod.rs
参考/MyCursor-main/MyCursor-main/src-tauri/src/infra/cursor/: mod.rs  paths.rs  process.rs  sqlite.rs  storage.rs  workbench.rs
参考/MyCursor-main/MyCursor-main/src-tauri/src/infra/platform/: linux.rs  macos.rs  mod.rs  windows.rs
参考/MyCursor-main/MyCursor-main/src-tauri/src/infra/seamless/: http_server.rs  injection_script.rs  mod.rs
参考/MyCursor-main/MyCursor-main/src-tauri/src/infra/store/: account_store.rs  backup_store.rs  config_store.rs  events_cache.rs  mod.rs  usage_cache.rs
参考/MyCursor-main/MyCursor-main/src-tauri/src/services/: account_service.rs  analytics_service.rs  auth_service.rs  identity_service.rs  mod.rs  seamless_service.rs
参考/MyCursor-main/MyCursor-main/src/components/: AggregatedUsageDisplay.tsx  Alert.tsx  Badge.tsx  Button.tsx  Card.tsx  ConfirmDialog.tsx  Dropdown.tsx  ErrorBoundary.tsx  EventBasedUsageChart.tsx  Icon.tsx  Input.tsx  Layout.tsx  Modal.tsx  Spinner.tsx  TagSelector.tsx  Textarea.tsx  ThemeModal.tsx  ThemeSelector.tsx  Toast.tsx  UsageChart.tsx  UsageDetailsModal.tsx  UsageDisplay.tsx  index.ts
参考/MyCursor-main/MyCursor-main/src/context/: ThemeContext.tsx
参考/MyCursor-main/MyCursor-main/src/lib/: cn.ts
参考/MyCursor-main/MyCursor-main/src/providers/: AppProviders.tsx  QueryProvider.tsx
参考/MyCursor-main/MyCursor-main/src/services/: accountService.ts  analyticsService.ts  configService.ts  cursorService.ts  seamlessService.ts  themeService.ts  usageService.ts
参考/MyCursor-main/MyCursor-main/src/styles/: global.css  theme-dark.css  theme-light.css  theme-transparent.css  theme.ts  variables.css
参考/MyCursor-main/MyCursor-main/src/types/: account.ts  analytics.ts  api.ts  auth.ts  tauri.ts  theme.ts  usage.ts
参考/MyCursor-main/MyCursor-main/src/utils/: cursorToken.ts  encryption.ts  errorHandler.ts  hybridStorage.ts  indexedDB.ts  logger.ts  performance.ts  safeStorage.ts  (+4 more)
参考/full_decompiled/: main.py
参考/full_decompiled/api/: client.py
参考/full_decompiled/assets/: ai-icon-neon.icns  icon.icns
参考/full_decompiled/core/: cursor_auth.py  cursor_injector.py  cursor_pro_setup.py  cursor_process.py  kiro_auth.py  kiro_process.py  kiro_protocol_register.py  kiro_register.py  machine_reset.py  seamless_server.py  seamless_switch.py  windsurf_auth.py
参考/full_decompiled/ui/: cursor_mini_float.py  main_window.py  platform_icons.py  styles.py  widgets.py
参考/full_decompiled/ui/dialogs/: announcement_dialog.py  kiro_register_dialog.py  policy_dialog.py  profile_dialog.py
参考/full_decompiled/ui/pages/: account_page.py  coming_soon_page.py  cursor_page.py  cursor_pro_page.py  kiro_page.py  login_page.py  overview_page.py  sub2api_platform_page.py  windsurf_page.py
(+75 files in other folders)
