[package]
name = "cursor-renewal"
version = "10.0.0"
description = "Cursor续杯助手 - Rust + Tauri"
authors = ["developer"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open", "dialog-open", "window-minimize", "window-close", "window-hide", "window-show", "window-start-dragging"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json", "native-tls"], default-features = false }
rusqlite = { version = "0.31", features = ["bundled"] }
uuid = { version = "1", features = ["v4"] }
sha2 = "0.10"
rand = "0.8"
hex = "0.4"
dirs = "5"
sysinfo = "0.30"
base64 = "0.21"
hmac = "0.12"
chrono = { version = "0.4", features = ["serde"] }
open = "5"
machine-uid = "0.5"
hostname = "0.4"
mac_address = "1"
regex = "1"
md5 = "0.7"
whoami = "1"
urlencoding = "2"
libc = "0.2"
# === 反逆向 / 字符串混淆 ===
obfstr = "0.4"
# === 模型解锁 MITM 代理 ===
hudsucker = { version = "0.24", default-features = false, features = ["decoder", "rcgen-ca", "rustls-client", "http2"] }
rcgen = { version = "0.14", features = ["x509-parser"] }
http-body-util = "0.1"
time = "0.3"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

# === Release 最强优化 + 反逆向 ===
[profile.release]
opt-level = 3            # 性能最优（"z" 体积最小但损性能；3 适合桌面应用）
lto = "fat"              # 跨 crate 完整 LTO，函数全部内联混淆
codegen-units = 1        # 单代码生成单元，最大化 LTO 效果
strip = "symbols"        # 移除所有符号表（函数名、变量名）
panic = "abort"          # 移除 unwind 表，减少逆向线索 + 减小体积
overflow-checks = false  # 关闭溢出检查（性能 + 减少 panic 代码）
debug = false            # 不生成 debug info
incremental = false      # 禁用增量编译（确保完整 LTO）

# Dev 保持快速编译
[profile.dev]
opt-level = 0
debug = true
