[package]
name = "mycursor"
version = "2.0.0"
description = "MyCursor - Machine ID and Token Management Tool"
authors = ["MyCursor Team"]
edition = "2021"

[lib]
name = "mycursor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [] }

[dependencies]
tauri = { version = "2.9.0", features = ["devtools", "tray-icon"] }
tauri-plugin-opener = "2.0.0"
tauri-plugin-fs = "2.4.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
dirs = "5.0"
anyhow = "1.0"
thiserror = "1.0"
rand = "0.8"
uuid = { version = "1.0", features = ["v4"] }
sha2 = "0.10"
regex = "1.11.2"
reqwest = { version = "0.11", features = ["json", "gzip", "deflate", "brotli"] }
base64 = "0.21"
hex = "0.4"
rusqlite = { version = "0.29", features = ["bundled"] }
tauri-plugin-dialog = "2.4.0"
tauri-plugin-single-instance = "2.2.0"
tiny_http = "0.12"
specta = { version = "=2.0.0-rc.22", features = ["derive"] }
tauri-specta = { version = "=2.0.0-rc.21", features = ["derive", "typescript"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.50"
windows = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_System_Threading",
] }

[target.'cfg(target_os = "macos")'.dependencies]
plist = "1.4"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

